--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-/******** Fonts from Google Fonts ********/
+/******** Fonts & General Body Layout ********/
 
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&family=Quicksand:wght@400;700&display=swap');
 
@@ -7,25 +7,43 @@ body {
     }
 }
 
+.content-text {
+    line-height: 2.5rem;
+    text-align: justify;
+    font-weight: bold;
+}
 
-/* Containers */
+.section-padding {
+    padding-left: 5%;
+    padding-right: 5%;
+}
+
+.section-title-push {
+    padding-left: 5%;
+}
+
+
+/******** Hyperlinks ********/
+
+a:link {
+    color: darkgrey;
+  }
+  
+  a:visited {
+    color: darkgrey;
+  }
+  
+  a:hover {
+    color: white;
+    text-decoration: none;
+  }
+  
+
+/******** Containers ********/
 
 .container {
     padding-left: 0;
     padding-right: 0;
-
-}
-
-.container-wrapper {
-    margin-top: 0px;
-    margin-bottom: 0px;
-    margin-left: 0px;
-    margin-right: 0px;
-    padding-top: 0px;
-    padding-bottom: 0px;
-    padding-left: 0px;
-    padding-right: 0px;
-
 }
 
 .container-wrapper--orange {
@@ -41,7 +59,7 @@ body {
 .callout-container {
     height: 100vh;
 
-    background: url('../images/dummy-image.jpeg') no-repeat bottom right fixed;
+    background: url('../images/lee-house-mixing-low-res.jpg') no-repeat center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -65,12 +83,12 @@ body {
 }
 
 .container-spacing {
-    padding-top: 5rem;
-    padding-bottom: 5rem;
+    padding-top: 7rem;
+    padding-bottom: 7rem;
 }
 
 .showreel-container {
-    background: url('../images/showreel-background.jpg') no-repeat bottom right fixed;
+    background: url('../images/showreel-background-low-res.jpg') no-repeat bottom right fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -83,22 +101,6 @@ body {
     position: relative;
     z-index: 2;
 }
-
-.contact-container {
-    background: url('../images/contact-background-3.jpg') no-repeat bottom right fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    position: relative;
-    z-index: 2;
-}
-
 
 
 /******** The navigation bar ********/
@@ -110,33 +112,39 @@ body {
     border: 0;
 }
 
-.navbar .navbar-toggler {
-    border: 0;
-}
-
 .navbar-brand {
     font-family: 'Open Sans', sans-serif;
     font-weight: bold;
     text-transform: uppercase;
     font-size: 30px;
     font-weight: 700;
+    
+}
+
+.nav-link {
+    display: block;
+    padding-top: 1rem;
+    padding-bottom: 0;
 }
 
 .tag-line {
     color: #f05f40;
     text-transform: lowercase;
     font-weight: lighter;
+    font-size: 1.5rem;
+    display: block;
 }
 
 .navbar .navbar-nav li {
     color: rgb(255, 255, 255)
 }
 
+.navbar .navbar-toggler {
+    border: 1;
+}
 
 
-
-
-/* Jumbotron */
+/******** Jumbotron ********/
 
 .jumbotron {
     background-color: transparent;
@@ -156,9 +164,7 @@ body {
 }
 
 
-
-
-/* Experience info boxes */
+/******** Callout Info Boxes ********/
 
 .info-box {
     color: white;
@@ -179,7 +185,7 @@ body {
 }
 
 
-/* Block dividers */
+/******** Block Dividers ********/
 
 .block-divider {
     width: 200px;
@@ -203,7 +209,8 @@ body {
     height: 10rem;
 }
 
-/**** Testimonials ****/
+
+/******** Testimonial Cards ********/
 
 .card {
     border-radius: 1rem;
@@ -252,16 +259,17 @@ body {
 
 }
 
-/**** Contact Card ****/
 
-.contact-card {
+/******** Contact ********/
+
+.contact-container {
     font-size: 20px;
-    margin-bottom: 0;
+    padding: 5rem, 5rem, 5rem, 5rem;
     font-weight: bold;
 }
 
 
-/**** Footer ****/
+/******** Footer ********/
 
 .footer-container {
     background-color: #000000;
@@ -269,7 +277,7 @@ body {
     padding-top: 10%;
     padding-bottom: 10%;
     padding-left: 2%;
-    padding-right: 2%;
+
     border-top: 1rem solid #f05f40
 }
 
@@ -295,34 +303,27 @@ body {
     margin-bottom: 1rem;
 }
 
-.footer-email {
-}
 
-.right-align {
-    text-align: right;
-}
+/******** Miscellaneous ********/
 
+#google-maps iframe {
+    width: 90%;
+    height: 90%;
+    border-radius: 20px;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
 
-.content-text {
-    line-height: 2.5rem;
-}
-
-
-
-.section-padding {
-    padding-left: 5%;
-    padding-right: 5%;
 }
 
 #lee-promo-image {
-    float: right;
-    vertical-align: top;
-    margin: 15px 15px 0px 15px; 
-    width: 45%;
-    height: auto;
-    border: 1rem solid #f05f40;
-}
-
-.section-title-push {
-    padding-left: 5%;
+    width: 100%;
+    height: 100%;
+    border: 0.5rem solid #f05f40;
+    object-fit: cover;
+    
+    
 }
